--- a/index.html
+++ b/index.html
@@ -8,7 +8,12 @@
 </head>
 <body>
     <header>
-        
+        im
+        <h1>logozinha</h1>
+        <ul>
+            <li>Enter</li>
+            <li>Register</li>
+        </ul>
     </header>
 </body>
 </html>
