--- a/index.html
+++ b/index.html
@@ -7,9 +7,8 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>
-        im
-        <h1>logozinha</h1>
+    <header class="cabecao">
+        <img class="cabecaoImg" src="img/alurastart logo 1.png" alt="logo do site coonversando, COO">
         <ul>
             <li>Enter</li>
             <li>Register</li>
