--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header class="cabecao">
-        <img class="cabecaoImg" src="img/alurastart logo 1.png" alt="logo do site coonversando, COO">
-        <ul>
-            <li>Enter</li>
-            <li>Register</li>
+    <header class="cabecalho">
+        <img src="img/alurastart logo 1.png" alt="logo do site coonversando/COO">
+        <ul class="cabecalhoListaItem">
+            <li class="cabecalhoListaItem">Enter</li>
+            <li class="cabecalhoListaItem">Register</li>
         </ul>
     </header>
 </body>
-</html>
+</html> 
