--- a/index.html
+++ b/index.html
@@ -14,5 +14,11 @@
             <li class="cabecalhoListaItem">Register</li>
         </ul>
     </header>
+
+    <section class="sobre">
+        <h2 class="sobreTitulo"></h2>
+        <p class="sobreTextoUm"></p>
+        <p class="sobreTextoDois"></p>
+    </section>
 </body>
-</html> 
+</html>
