--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header class="cabecalho">
-        <img src="img/alurastart logo 1.png" alt="logo do site coonversando/COO">
+        <img src="img/alurastart logo 1.png" alt="logo do site coonversando/COO" class="cabecalhoImg" >
         <ul class="cabecalhoListaItem">
             <li class="cabecalhoListaItem">Enter</li>
             <li class="cabecalhoListaItem">Register</li>
@@ -16,9 +16,13 @@
     </header>
 
     <section class="sobre">
-        <h2 class="sobreTitulo"></h2>
-        <p class="sobreTextoUm"></p>
-        <p class="sobreTextoDois"></p>
+        <div class="sobreConteudo">
+            <h2 class="sobreTitulo">Coonversando sobre...</h2>
+            <p class="sobreTextoUm">Artistas, artes, designs e mangás Aqui teremos artistas incriveis e recomendações de mangás, novels e mahwas</p>
+        </div>
+
+        <img src="img/Formula-amico 1.png" alt=" Imagem do Meliodas dando um joinha" class="sobreImagem">
+
     </section>
 </body>
 </html>
