--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header class="cabecalho">
-        <img src="img/alurastart logo 1.png" alt="logo do site coonversando/COO" class="cabecalhoImg" >
+        <img class="cabecalhoImg" src="img/conversando-logo.png" alt="logo do site coonversando/COO">
         <ul class="cabecalhoListaItem">
             <li class="cabecalhoListaItem">Enter</li>
             <li class="cabecalhoListaItem">Register</li>
@@ -21,7 +21,7 @@
             <p class="sobreTextoUm">Artistas, artes, designs e mangás Aqui teremos artistas incriveis e recomendações de mangás, novels e mahwas</p>
         </div>
 
-        <img src="img/Formula-amico 1.png" alt=" Imagem do Meliodas dando um joinha" class="sobreImagem">
+        <img class="sobreImagem" src="img/meliodas.png" alt=" Imagem do Meliodas dando um joinha">
 
     </section>
 </body>
