--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <header class="cabecalho">
         <img class="cabecalhoImg" src="img/conversando-logo.png" alt="logo do site coonversando/COO">
         <ul class="cabecalhoListaItem">
-            <li class="cabecalhoListaItem">Enter</li>
-            <li class="cabecalhoListaItem">Register</li>
+            <li class="Item">Enter</li>
+            <li class="Item">Register</li>
         </ul>
     </header>
 
