--- a/index.html
+++ b/index.html
@@ -25,5 +25,37 @@
 
     </section>
 
+    <section class="membros">
+        <h2 class="membrosTitulo">Influencers</h2>
+        <div class="membroDiv">
+            <img class="membroImagem" src="img/ura.png" alt="Logo do artista Ura_Artz">
+            <h3 class="membroNome">Ura_Artz</h3>
+            <img class="membroIcone" src="img/instagram 1.png" alt="Icone de Instagram">
+            <img class="membroIcone" src="img/twitter.png" alt="Icone de X">
+            <img class="membroIcone" src="img/linkedin 1.png" alt="Icone de Linkedin">
+        </div>
+        <div class="membroDiv">
+            <img class="membroImagem" src="img/Thalys.png" alt="Logo do artista Thalysman">
+            <h3 class="membroNome">Thalysman</h3>
+            <img class="membroIcone" src="img/instagram 1.png" alt="Icone de Instagram">
+            <img class="membroIcone" src="img/twitter.png" alt="Icone de X">
+            <img class="membroIcone" src="img/linkedin 1.png" alt="Icone de Linkedin">
+        </div>
+        <div class="membroDiv">
+            <img class="membroImagem" src="img/gl art.png" alt="Logo do artista GL_Art">
+            <h3 class="membroNome">GL_Art</h3>
+            <img class="membroIcone" src="img/instagram 1.png" alt="Icone de Instagram">
+            <img class="membroIcone" src="img/twitter.png" alt="Icone de X">
+            <img class="membroIcone" src="img/linkedin 1.png" alt="Icone de Linkedin">
+        </div>
+        <div class="membroDiv">
+            <img class="membroImagem" src="img/be.png" alt="Logo do artista Bê Vieira">
+            <h3 class="membroNome">Bê Vieira</h3>
+            <img class="membroIcone" src="img/instagram 1.png" alt="Icone de Instagram">
+            <img class="membroIcone" src="img/twitter.png" alt="Icone de X">
+            <img class="membroIcone" src="img/linkedin 1.png" alt="Icone de Linkedin">
+        </div>
+</section>
+
 </body>
 </html>
